# AsterTrack

./: .gitignore  README.md  camera.code-workspace  camera_mcu.code-workspace  controller.code-workspace  server.code-workspace
camera/: .gitignore  CMakeLists.txt  README.md
camera/dependencies/: README.md
camera/env/: Dockerfile.vc4  README.md  build_commands.sh  build_vc4_vpu_qpu.sh
camera/libvcsm/: CMakeLists.txt
camera/licenses/: Broadcom  hash-library.zlib  vc4asm.source  wifi.sh.source
camera/qpu_programs/: qpu_blob_tiled_min.asm  vc4.qinc
camera/setup/: README.md  config.txt  data_extract.sh  data_read.sh  data_write.sh  flash_image.sh  i2c-modules-6.1.68-piCore-v6-v7.tcz  i2c-modules-6.1.68-piCore.tcz  i2c-modules-6.6.47-piCore.tcz  rpi-vc-14-patch.tcz  search_deps.sh  search_packages.sh  setup_image.sh  storage_apply.sh  storage_update.sh
camera/setup/scripts/: bootsync.sh  build_debug.sh  build_qpu.sh  build_release.sh  drivers_auto_build.sh  drivers_build_modules.sh  drivers_fetch_sources.sh  drivers_load_modules.sh  kernel_fetch_sources.sh  kernel_modules_prepare.sh  run.sh  run_log.sh  ssh.sh  stop.sh  swap_on.sh  swap_part.sh  wifi.sh
camera/setup/source/: mount_data.sh  setup_device.sh
camera/setup/startup/: .filetool.lst  bootlocal.sh  bootsync.sh  part.sh  ssh.sh  swap.sh  wifi.sh
camera/source/: main.cpp  options.hpp  state.cpp  state.hpp  version.cpp  version.hpp  version.sh  visualisation.cpp  visualisation.hpp
camera/source/blob/: detection.cpp  detection.hpp  vpu_find_active_tiles.hpp
camera/source/camera/: gcs.hpp  gcs_v4l2.cpp
camera/source/comm/: comm.cpp  comm.hpp  firmware.cpp  firmware.hpp  parsing.cpp  parsing.hpp  server.cpp  server.hpp  timesync.cpp  timesync.hpp  uart.cpp  uart.hpp  wireless.cpp  wireless.hpp
camera/source/mcu/: mcu.cpp  mcu.hpp  stm32_bootloader.cpp  stm32_bootloader.hpp  stm32_bootloader_platform.hpp
camera/source/processing/: framesync.cpp  framesync.hpp  masking.cpp  masking.hpp  processing.cpp  processing.hpp  qpu_cores_masking.hpp
camera/source/qpu/: qpu_base.c  qpu_base.h  qpu_info.c  qpu_info.h  qpu_program.c  qpu_program.h  qpu_registers.h
camera/source/util/: crash_handler.cpp  fbUtil.c  fbUtil.h  log.hpp  system.hpp
camera/source/vcsm/: vc_sm_cma_ioctl.h  vcsm.cpp  vcsm.hpp
camera/source/videocore/: mailbox.c  mailbox.h  qpu_info.c  qpu_info.h  qpu_program.c  qpu_program.h  vc_base.c  vc_base.h  vpu_program.c  vpu_program.h
camera/vpu_programs/: crt0.S  entry.c  routines.S  vc4-simple.ld
server/: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  analyze_crash_report.sh  astertrack-dev.desktop  astertrack.desktop  env_debian_ext.sh  env_debian_int.sh  package.sh
server/config/: camera_config.json  general_config.json  lens_presets_builtin.json
server/dependencies/: build.bat  build.sh  clean.bat  clean.sh
server/licenses/: CrashCatch.MIT  ImSequencer.MIT  circular_buffer.MIT  ctpl.Apache2.0  ctpl.source  dbscan.MIT  handlecrash.MIT  implot.MIT  libjpeg-turbo.mBSD3  libusb.source  nativefiledialog-extended.zlib  oscpack.MIT  poselib.p3p_ding.BSD3  stb.MIT  value_ptr.BSL1.0  vnproch551.MIT  vrpn.BSL1.0
server/resources/: astertrack.manifest  astertrack.rc  astertrack_version.rc  conf.rs
server/resources/fonts/: IconsLineAwesome.h
server/source/: app.cpp  app.hpp  config.cpp  config.hpp  crash_handler.inl  recording.cpp  recording.hpp  server.cpp  server.hpp  signals.hpp  simulation.cpp  simulation.hpp  version.cpp  version.hpp
server/source/calib/: camera_system.hpp  camera_system.inl  obs_data.cpp  obs_data.hpp  obs_data.inl  optimisation.cpp  optimisation.hpp
server/source/calib_point/: calibration_room.cpp  calibration_room.hpp  parameters.hpp  reconstruction.cpp  reconstruction.hpp  reconstruction_internal.hpp  reconstruction_recovery.cpp  reconstruction_stratification.cpp  reconstruction_tools.cpp
server/source/calib_target/: aquisition.cpp  aquisition.hpp  assembly.cpp  assembly.hpp  parameters.hpp  reconstruction.cpp  reconstruction.hpp
server/source/comm/: protocol_packet.cpp  protocol_packet.hpp  server.cpp  server.hpp  streaming.cpp  streaming.hpp  timesync.cpp  timesync.hpp  timingRecord.hpp  usb.cpp  usb.hpp  wireless_server.cpp  wireless_server.hpp  wireless_server_client.hpp
server/source/device/: camera_firmware.cpp  camera_firmware.hpp  controller_firmware.cpp  controller_firmware.hpp  parsing.cpp  parsing.hpp  tracking_camera.cpp  tracking_camera.hpp  tracking_controller.cpp  tracking_controller.hpp  tracking_device.cpp  wireless_cameras.cpp  wireless_cameras.hpp
server/source/emulation/: detection.cpp  detection.hpp  emulation.hpp  emulation.inl  integration.cpp  integration.hpp
server/source/imu/: device.hpp  imu.hpp  remoteIMU.cpp  trackerAsterTrack.cpp  trackerSlimeVR.cpp
server/source/io/: integrations.cpp  integrations.hpp  vmc.cpp  vmc.hpp  vrpn.cpp  vrpn.hpp  vrpn_imu.cpp  vrpn_imu.hpp
server/source/offline/: recording.cpp  simulation.cpp  simulation.hpp
server/source/pipeline/: frameRecord.hpp  parameters.hpp  pipeline.cpp  pipeline.hpp  pipeline_calibration_point.cpp  pipeline_calibration_target.cpp  pipeline_tracking.cpp  record.hpp
server/source/point/: kalman.inl  parameters.hpp  sequence_data.cpp  sequence_data.hpp  sequence_data.inl  sequences2D.cpp  sequences2D.hpp  tracking3D.cpp  tracking3D.hpp  triangulation.cpp  triangulation.hpp
server/source/server/: server.cpp  server.hpp  server_device.cpp  server_internal.hpp  server_offline.cpp
server/source/tracking/: SymPyDerivation_Own.py  cluster.cpp  cluster.hpp  kalman.hpp  rotation.hpp  tracking.cpp  tracking.hpp  virtual.cpp  virtual.hpp
server/source/ui/: cameraPanels.cpp  cameraSettings.cpp  cameraView.cpp  control.cpp  devices.cpp  insights.cpp  integrations.cpp  logging.cpp  menu.cpp  pipeline.cpp  pipeline_calibration_point.cpp  pipeline_calibration_target.cpp  shared.hpp  targets.cpp  trackers.cpp  ui.cpp  ui.hpp  view3D.cpp  visSettings.cpp  wireless.cpp
server/store/: camera_config.json  camera_simulated.json  general_config.json
(+260 files in other folders)
